# gof-design-patterns

./: .gitignore  README.md
SBomber/: .hw5.patch.swp  CMakeLists.txt  hw%2%.patch  hw%3%.patch  hw%4%.patch  hw%5%.patch  hw4.cpp  hw5.patch
SBomber/Backup/: CMakeLists.txt
SBomber/Backup/include/: Bomb.h  Command.h  DestroyableGroundObject.h  Director.h  DynamicObject.h  EvenBombIterator.h  FileLoggerProxy.h  GameObject.h  GetCurDateTimeSingleton.h  Ground.h  House.h  HouseBuilder.h  HouseBuilderA.h  IVisitor.h  LevelGUI.h  MyTools.h  Plane.h  SBomber.h  Tank.h
SBomber/Backup/src/: Bomb.cpp  CollisionDetector.cpp  Command.cpp  EvenBombIterator.cpp  FileLoggerSingleton.cpp  GetCurDateTimeSingleton.cpp  Ground.cpp  House.cpp  HouseBuilderA.cpp  ILevelFactory.cpp  IVisitor.cpp  LevelGUI.cpp  MyTools.cpp  Plane.cpp  SBomber.cpp  Tank.cpp  main.cpp
SBomber/forLesson4/: CollisionDetector.cpp  CollisionDetector.h  HouseBuilder.h  HouseBuilderA.h
SBomber/include/: AdapterTank.h  Bomb.h  BombDecorator.h  BombIterator.h  CollisionDetector.h  Director.h  FileLoggerSingleton.h  GameObject.h  House.h  HouseBuilder.h  HouseBuilderA.h  IIterator.h  ILevelFactory.h  MyTools.h  OddBombIterator.h  SBomber.h  Tank.h  TestFileLogger.h  WinterPlane.h
SBomber/src/: .HouseBuilder.cpp.swp  .HouseBuilderA.cpp.swp  AdapterTank.cpp  Bomb.cpp  BombDecorator.cpp  BombIterator.cpp  CollisionDetector.cpp  Command.cpp  FileLoggerProxy.cpp  FileLoggerSingleton.cpp  Ground.cpp  House.cpp  HouseBuilder.cpp  HouseBuilderA.cpp  LevelGUI.cpp  OddBombIterator.cpp  SBomber.cpp  TestFileLogger.cpp  WinterPlane.cpp  main.cpp
(+33 files in other folders)
